--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ python = "^3.10"
 
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.0"
 pre-commit = "^3.3.3"
 
 [build-system]
@@ -21,6 +20,10 @@ build-backend = "poetry.core.masonry.api"
 python_version = "3.10"
 format = "wemake"
 ignore = ['D100', 'D101', 'D102', 'D103', 'D104', 'D105', 'D106', 'D107']
+per-file-ignores = """
+    backoff.py: WPS220,WPS231,WPS232,WPS419,WPS430
+    sleep_funcs.py: E704,WPS210,WPS220,WPS331,WPS428,S311
+"""
 max-line-length = 119
 max-string-usages = 8
 
